*                      Added CRC check after programming whole AES key.
*                      Modified temperature and voltage checks at each eFUSE
*                      bit programming, only checking before eFUSE programming
*                      and after finishing programming of all the user requested
*                      bits.Verifying each eFUSE programmed bit with all 3
*                      margin reads
*        vns  03/10/17 CR #971154 - efuse PS of ZynqMP
*                      Modified PROG_GATE feature support, if user requests
*                      programming library programs all 3 bits of PROG_GATE.
*                      Modified secure control bits of efuse.
*                      Modified macros in header file for secure control bits
*                      Provided support for programming LBIST, LPD and FPD SC
*                      enable bits and some of the reserved bits.
* 6.3    vns  07/12/17 Added support for programming eFUSE and BBRAM of kintex
*                      Ultrascale plus.
* 6.4    vns  02/19/18 Added XilSKey_ZynqMp_EfusePs_CacheLoad() call in
*                      XilSKey_ZynqMp_EfusePs_Write(), on successul programming
*                      of all requested efuse bits updated efuse can directly
*                      read from eufse cache.
*        vns  02/27/18 Added support for virtex ultrascale and untrascale plus
*                      Provided efuse secure bit(obfuscation enable feature)
*                      programming support for ultrascale and untrascale plus.
*        vns  03/09/18 Added correct status bits for ultrascale plus
* 6.5    vns  03/16/18 Fixed hanging issue when program/zeroise is requested
*                      while programming mode in enabled state.
* 6.6    vns  06/06/18 Added doxygen tags
*        vns  09/18/18 Added support API for programming zynqmp efuseps from
*		       Linux
*
 ********************************************************************************/